--- a/Changes
+++ b/Changes
@@ -4,3 +4,6 @@ Revision history for Perl extension Timestamp::Simple.
 	- original version; created by h2xs 1.21 with options
 		-X -v 1.00 -n Timestamp::Simple
 
+1.01  Thu Feb  7 09:14:36 2007
+	- repackaged to conform better to CPAN standards
+
